2011-08-01 Borut Razem <borut.razem AT gmail.com>

	* support/regression/tests/inline.c:
	  excluded failing regression test case on Mac OS X GCC 4.0.1

2011-07-31 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c(genEndFunction): added mov PSW removal based on patch
	  2702889 by Hubert Sack
	* src/mcs51/ralloc.c: added findAllBankregs, mcs51_allBankregs
	* src/mcs51/ralloc.h: added mcs51_allBankregs

2011-07-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_setjmp.c: fixed mcs51 stack-auto and xstack implementations
	* src/SDCCopt.c(miscOpt): added my doubts
	* support/regression/tests/bug3379723.c: disabled for hc08 which has no sfr
	* support/regression/tests/setjmp.c: test only on supported targets
	* support/regression/tests/bug3361290.c,
	* support/regression/tests/bug3366711.c,
	* support/regression/tests/bug3379723.c: set native eolstyle property

2011-07-28 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/setjmp.h,
	  device/lib/z80/Makefile.in,
	  device/lib/z80/setjmp.s,
	  support/regression/tests/setjmp.c:
	  setjmp() and longjmp() for the Z80.

2011-07-28 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/setjmp.h,
	  device/lib/_setjmp.c,
	  support/regression/tests/setjmp.c:
	  Fixed some setjmp() / longjmp() bugs.
	* support/regression/tests/bug3379723.c:
	  Do not compile on host.

2011-07-27 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCopt.c: fixed bug
	  #3378933: Regression test compare_2_n.c fails on sparc machines
	* support/regression/test/compare_2_n.c:
	  reeabled bug #3378933 test case

2011-07-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/bug3379732.c:
	  Bitwise-op cleanup, fixed bug #3379732.

2011-07-26 Borut Razem <borut.razem AT gmail.com>

	* support/regression/test/literalop.c:
	  disabled failing test on i386 and sparc64 NetBSD gcc 4.1
	* support/regression/test/compare_2_n.c: